classDiagram

    direction LR

    class AbstractInterface~TypeGet, TypePost, TypePut~ {
        <<Interface>>
        List~TypeGet~ List()
        TypeGet Post(TypePost data)
        TypeGet Get(string id)
        TypeGet Put(string id, TypePut data)
        TypeGet Delete(string id)
    }

    class UsersInterface["&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;UsersInterface&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"] {
        <<Interface>>
        List~UserGet~ List()
        UserGet Post(UserPost data)
        UserGet Get(string id)
        UserGet Put(string id, UserPut data)
        UserGet Delete(string id)
    }

    class IssuesInterface["&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;IssuesInterface&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"] {
        <<Interface>>
        List~IssueGet~ List()
        IssueGet Post(IssuePost data)
        IssueGet Get(string id)
        IssueGet Put(string id, IssuePut data)
        IssueGet Delete(string id)
    }

    class CommentsInterface["&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CommentsInterface&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"] {
        <<Interface>>
        List~CommentGet~ List()
        CommentGet Post(CommentPost data)
        CommentGet Get(string id)
        CommentGet Put(string id, CommentPut data)
        CommentGet Delete(string id)
    }
    
    AbstractInterface <|-- UsersInterface
    AbstractInterface <|-- IssuesInterface
    AbstractInterface <|-- CommentsInterface